--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						
 					</section>
 
-					<section data-background-iframe="file:///Users/hlwang/Teaching/QHFZ/%E6%96%B0%E6%95%99%E5%B8%88%E5%9F%B9%E8%AE%AD/jsmind/example/1_basic.html" data-background-interactive>
+					<section data-background-iframe="./jsmind/example/1_basic.html" data-background-interactive>
 						
 					</section>
 				</section>
@@ -166,7 +166,8 @@
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ],
-				backgroundTransition: 'convex'
+				backgroundTransition: 'convex',
+				transition: 'convex'
 			});
 		</script>
 	</body>
