--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<p>
 						<small>清华附中2021新教师课件设计小组</small>
 					</p>
+					<p>快来<a href="lightenit.github.io">lightenit.github.io</a>看看我！</p>
 				</section>
 				<section>
 					<section>
