--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 				</section>
 
-				<section>
-					<h4>四边形两组对边相等 ⇒ 四边形为平行四边形</h4>
+				<section data-background="detail.jpg">
+
 				</section>
 			</div>
 		</div>
