--- a/index.html
+++ b/index.html
@@ -1,59 +1,4 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-		<title>平行四边形的判定</title>
-
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
-
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>
-					<h3>平行四边形的判定</h3>
-				</section>
-				<section>
-					<div class="fragment">
-						<h3 style="text-align: left;"><strong style="color: red;">定义：</strong></h3>
-						<p style="text-align: left;">两组对边分别平行的四边形叫做平行四边形</p>
-					</div>
-					<div class="fragment">
-						<h3 style="text-align: left;"><strong style="color: red;">性质：</strong></h3>
-  						<span class="fragment highlight-red"><p style="text-align: left;">平行四边形的对边相等</p></span>
-  						<p style="text-align: left;">平行四边形的对角相等</p>
-  						<p style="text-align: left;">平行四边形的对角线互相平分</p>
-					</div>
-
-				</section>
-
-				<section data-background="detail.jpg">
-
-				</section>
-			</div>
-		</div>
-
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
-				transition: 'convex',
-
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
-		</script>
-	</body>
-</html>
+---
+layout: home
+author_profile: true
+---
